More outline tweaks

--- a/packages/stateofjs/lib/surveys/css2020outline.yml
+++ b/packages/stateofjs/lib/surveys/css2020outline.yml
@@ -365,14 +365,14 @@ outline:
   ### OTHER TOOLS ###
 
   - title: Other Tools
+    slug: other_tools
     description: For these tools & technologies, just check the ones that you use regularly.
     questions:
       - title: Text Editors
+        id: text_editors
         description: Which text editor(s) do you regularly use?
         template: multiple
         allowmultiple: true
-        allowother: true
-        randomize: true
         options:
           - VS Code
           - Sublime Text
@@ -386,11 +386,10 @@ outline:
         template: text
         description: Other text editors you use not mentioned in the list above
       - title: Browsers
+        id: browsers
         description: Which browser(s) do you work in primarily during initial development?
         template: multiple
         allowmultiple: true
-        allowother: true
-        randomize: false
         options:
           - Edge
           - Chrome
@@ -424,9 +423,6 @@ outline:
         id: browsers
         description: Which browsers do you test in?
         template: multiple
-        allowmultiple: true
-        allowother: true
-        randomize: false
         options:
           - Edge
           - Chrome
@@ -450,9 +446,6 @@ outline:
         id: form_factors
         description: Which form factors do you test on?
         template: multiple
-        allowmultiple: true
-        allowother: true
-        randomize: false
         options:
           - Desktop
           - Smartphone
@@ -467,10 +460,7 @@ outline:
       - title: CSS for Print
         id: css_for_print
         description: Do you write print styles?
-        template: multiple
-        allowmultiple: false
-        allowother: false
-        randomize: false
+        template: single
         options:
           - I (almost) never write print styles
           - I occasionally write print styles
@@ -480,7 +470,7 @@ outline:
       - title: CSS for Email Clients
         id: css_for_email
         description: Do you write CSS for email clients?
-        template: multiple
+        template: single
         allowmultiple: false
         allowother: false
         randomize: false
@@ -500,10 +490,6 @@ outline:
         id: blogs_news_magazines
         description: Which CSS-related blogs/magazines/etc. do you read?
         template: multiple
-        allowmultiple: true
-        allowother: true
-        randomize: true
-        suffix: choices
         options:
           - CSS Tricks
           - Smashing Magazine
@@ -523,10 +509,6 @@ outline:
       - title: Sites & Courses
         description: Which CSS-related sites/courses/etc. do you consult?
         template: multiple
-        allowmultiple: true
-        allowother: true
-        randomize: true
-        suffix: choices
         options:
           - Stack Overflow
           - MDN
@@ -546,10 +528,6 @@ outline:
       - title: Podcasts
         description: Which CSS or programming-related podcasts do you listen to?
         template: multiple
-        allowmultiple: true
-        allowother: true
-        randomize: true
-        suffix: choices
         options:
           - Shop Talk Show
           - Style Guide Podcast
@@ -604,10 +582,7 @@ outline:
       - title: Years of Experience
         id: years_of_experience
         description: How long you've been writing CSS.
-        template: multiple
-        allowmultiple: false
-        allowother: false
-        randomize: false
+        template: single
         options:
           - Less than one year
           - 1-2 years
@@ -618,10 +593,8 @@ outline:
       - title: Job Title
         id: job_title
         description: How do you introduce yourself at parties?
-        template: multiple
-        allowmultiple: false
+        template: single
         allowother: true
-        randomize: false
         options:
           - Front-end Developer/Engineer
           - Full-stack Developer/Engineer
@@ -632,10 +605,7 @@ outline:
       - title: JavaScript Proficiency
         id: javascript_proficiency
         description: How proficient are you at JavaScript development? (pick the most advanced option corresponding to your skills)
-        template: multiple
-        allowmultiple: false
-        allowother: false
-        randomize: false
+        template: single
         options:
           - I am not able to write any JavaScript
           - I can write short, simple JavaScript or jQuery statements
@@ -645,10 +615,7 @@ outline:
       - title: Back-end Proficiency
         id: backend_proficiency
         description: How proficient are you at back-end development? (pick the most advanced option corresponding to your skills)
-        template: multiple
-        allowmultiple: false
-        allowother: false
-        randomize: false
+        template: single
         options:
           - I am not able to handle any back-end work
           - I can set up all-in-one CMSs (WordPress, etc.) or static site generators (Jekyll, etc.)
@@ -656,10 +623,7 @@ outline:
           - I can set up an entire back-end from scratch (Go, Node, etc.)
       - title: Company Size
         id: company_size
-        template: multiple
-        allowmultiple: false
-        allowother: false
-        randomize: false
+        template: single
         options:
           - Just me
           - 1-5 people
@@ -672,10 +636,7 @@ outline:
       - title: Yearly Salary
         id: yearly_salary
         description: In USD
-        template: multiple
-        allowmultiple: false
-        allowother: false
-        randomize: false
+        template: single
         options:
           - I work for free :(
           - $0-$10k
@@ -689,8 +650,7 @@ outline:
         template: text
       - title: Your Gender
         id: gender
-        template: multiple
-        allowmultiple: false
+        template: single
         allowother: true
         options:
           - Female
