--- a/packages/stateofjs/lib/surveys/js2019outline.yml
+++ b/packages/stateofjs/lib/surveys/js2019outline.yml
@@ -267,10 +267,6 @@ outline:
         id: utilities
         description: Which JavaScript utilities do you regularly use?
         template: multiple
-        allowmultiple: true
-        allowother: true
-        randomize: true
-        suffix: choices
         options:
           - Immer
           - Lodash
@@ -289,10 +285,6 @@ outline:
         id: text_editors
         description: Which text editor(s) do you regularly use?
         template: multiple
-        allowmultiple: true
-        allowother: true
-        randomize: true
-        suffix: choices
         options:
           - VS Code
           - Sublime Text
@@ -309,10 +301,6 @@ outline:
         id: browsers
         description: Which browser(s) do you work in primarily during initial development?
         template: multiple
-        allowmultiple: true
-        allowother: true
-        randomize: false
-        suffix: choices
         options:
           - Edge
           - Chrome
@@ -327,10 +315,6 @@ outline:
         id: build_tools
         description: Which build tools do you use to compile and bundle your code?
         template: multiple
-        allowmultiple: true
-        allowother: true
-        randomize: false
-        suffix: choices
         options:
           - Webpack
           - Parcel
@@ -347,10 +331,6 @@ outline:
         id: non_js_languages
         description: Which other languages do you code in besides JavaScript and its flavors?
         template: multiple
-        allowmultiple: true
-        allowother: true
-        randomize: false
-        suffix: choices
         options:
           - PHP
           - Ruby
@@ -383,10 +363,6 @@ outline:
         id: blogs_news_magazines
         description: Which JavaScript-related blogs/magazines/etc. do you read?
         template: multiple
-        allowmultiple: true
-        allowother: true
-        randomize: true
-        suffix: choices
         options:
           - CSS Tricks
           - Smashing Magazine
@@ -408,10 +384,6 @@ outline:
         id: sites_courses
         description: Which JavaScript-related sites/courses/etc. do you consult?
         template: multiple
-        allowmultiple: true
-        allowother: true
-        randomize: true
-        suffix: choices
         options:
           - Stack Overflow
           - MDN
@@ -431,10 +403,6 @@ outline:
         id: podcasts
         description: Which JavaScript or programming-related podcasts do you listen to?
         template: multiple
-        allowmultiple: true
-        allowother: true
-        randomize: true
-        suffix: choices
         options:
           - Shop Talk Show
           - The Changelog
@@ -491,10 +459,7 @@ outline:
       - title: Years of Experience
         id: years_of_experience
         description: How long you've been writing JavaScript.
-        template: multiple
-        allowmultiple: false
-        allowother: false
-        randomize: false
+        template: single
         options:
           - Less than one year
           - 1-2 years
@@ -505,19 +470,13 @@ outline:
       - title: Job Title
         id: job_title
         description: How do you introduce yourself at parties?
-        template: multiple
-        allowmultiple: false
+        template: single
         allowother: true
-        randomize: false
         options:
           - Front-end Developer/Engineer
           - Full-stack Developer/Engineer
           - Back-end Developer/Engineer
           - Web Developer
-      - title: Other Job Title
-        id: job_title_other
-        template: text
-        description: Other job title you use not mentioned in the list above
       # - title: HTML Proficiency
       #   description: How proficient are you at writing HTML? (pick the most advanced option corresponding to your skills)
       #   template: multiple
@@ -533,10 +492,7 @@ outline:
       - title: CSS Proficiency
         id: css_proficiency
         description: How proficient are you at writing CSS? (pick the most advanced option corresponding to your skills)
-        template: multiple
-        allowmultiple: false
-        allowother: false
-        randomize: false
+        template: single
         options:
           - 'Level 1: virtually no knowledge of CSS'
           - 'Level 2: using CSS frameworks and tweaking existing styles'
@@ -546,10 +502,7 @@ outline:
       - title: Back-end Proficiency
         id: backend_proficiency
         description: How proficient are you at back-end development? (pick the most advanced option corresponding to your skills)
-        template: multiple
-        allowmultiple: false
-        allowother: false
-        randomize: false
+        template: single
         options:
           - 'Level 1: not able to handle any back-end work'
           - 'Level 2: able to set up all-in-one CMSs (WordPress, etc.) or static site generators (Jekyll, etc.)'
@@ -558,10 +511,7 @@ outline:
           - 'Level 5: able to handle complex multi-server or microservices architectures'
       - title: Company Size
         id: company_size
-        template: multiple
-        allowmultiple: false
-        allowother: false
-        randomize: false
+        template: single
         options:
           - Just me
           - 1-5 people
@@ -574,10 +524,7 @@ outline:
       - title: Yearly Salary
         id: yearly_salary
         description: In USD
-        template: multiple
-        allowmultiple: false
-        allowother: false
-        randomize: false
+        template: single
         options:
           - I work for free :(
           - $0-$10k
@@ -591,18 +538,13 @@ outline:
         template: text
       - title: Your Gender
         id: gender
-        template: multiple
-        allowmultiple: false
+        template: single
         allowother: true
         options:
           - Female
           - Male
           - Non-binary/ third gender
           - Prefer not to say
-      - title: Other Gender
-        id: gender_other
-        template: text
-        description: Other gender not mentioned in the list above
       - title: Your Country
         id: country
         template: country
