--- a/packages/stateofjs/lib/surveys/css2020outline.yml
+++ b/packages/stateofjs/lib/surveys/css2020outline.yml
@@ -462,10 +462,14 @@ outline:
         description: Do you write print styles?
         template: single
         options:
-          - I (almost) never write print styles
-          - I occasionally write print styles
-          - I write print styles as part of most projects
-          - I focus mainly on CSS for print
+          - label: I (almost) never write print styles
+            value: 0
+          - label: I occasionally write print styles
+            value: 1
+          - label: I write print styles as part of most projects
+            value: 2
+          - label: I focus mainly on CSS for print
+            value: 3
 
       - title: CSS for Email Clients
         id: css_for_email
@@ -475,10 +479,14 @@ outline:
         allowother: false
         randomize: false
         options:
-          - I (almost) never write CSS for email clients
-          - I occasionally write CSS for email clients
-          - I write CSS for email clients as part of most projects
-          - I focus mainly on CSS for email clients
+          - label: I (almost) never write CSS for email clients
+            value: 0
+          - label: I occasionally write CSS for email clients
+            value: 1
+          - label: I write CSS for email clients as part of most projects
+            value: 2
+          - label: I focus mainly on CSS for email clients
+            value: 3
 
     ### RESOURCES ###
 
@@ -584,67 +592,106 @@ outline:
         description: How long you've been writing CSS.
         template: single
         options:
-          - Less than one year
-          - 1-2 years
-          - 2-5 years
-          - 5-10 years
-          - 10-20 years
-          - 20+ years
+          - label: Less than one year
+            value: range_less_than_1
+          - label: 1-2 years
+            value: range_1_2
+          - label: 2-5 years
+            value: range_2_5
+          - label: 5-10 years
+            value: range_5_10
+          - label: 10-20 years
+            value: range_10_20
+          - label: 20+ years
+            value: range_more_than_20
+
       - title: Job Title
         id: job_title
         description: How do you introduce yourself at parties?
         template: single
         allowother: true
         options:
-          - Front-end Developer/Engineer
-          - Full-stack Developer/Engineer
-          - Back-end Developer/Engineer
-          - Web Designer
-          - UI Designer
-          - UX Designer
+          - label: Front-end Developer/Engineer
+            value: front_end_developer
+          - label: Full-stack Developer/Engineer
+            value: full_stack_developer
+          - label: Back-end Developer/Engineer
+            value: back_end_developer
+          - label: Web Developer
+            value: web_developer
+          - label: Web Designer
+            value: web_designer
+          - label: UI Designer
+            value: ui_designer
+          - label: UX Designer
+            value: ux_designer
       - title: JavaScript Proficiency
         id: javascript_proficiency
         description: How proficient are you at JavaScript development? (pick the most advanced option corresponding to your skills)
         template: single
         options:
-          - I am not able to write any JavaScript
-          - I can write short, simple JavaScript or jQuery statements
-          - I can work on existing front-end codebases using modern frameworks (React, Vue, etc.)
-          - I can architecture entire front-end codebases from scratch
-          - I can handle advanced front-end patterns (state management, data loading, etc.)
+          - label: I am not able to write any JavaScript
+            value: 0
+          - label: I can write short, simple JavaScript or jQuery statements
+            value: 1
+          - label: I can work on existing front-end codebases using modern frameworks (React, Vue, etc.)
+            value: 2
+          - label: I can architecture entire front-end codebases from scratch
+            value: 3
+          - label: I can handle advanced front-end patterns (state management, data loading, etc.)
+            value: 4
       - title: Back-end Proficiency
         id: backend_proficiency
         description: How proficient are you at back-end development? (pick the most advanced option corresponding to your skills)
         template: single
         options:
-          - I am not able to handle any back-end work
-          - I can set up all-in-one CMSs (WordPress, etc.) or static site generators (Jekyll, etc.)
-          - I can develop apps using pre-existing frameworks (Rails, Laravel, etc.)
-          - I can set up an entire back-end from scratch (Go, Node, etc.)
+          - label: I am not able to handle any back-end work
+            value: 0
+          - label: I can set up all-in-one CMSs (WordPress, etc.) or static site generators (Jekyll, etc.)
+            value: 1
+          - label: I can develop apps using pre-existing frameworks (Rails, Laravel, etc.)
+            value: 2
+          - label: I can set up an entire back-end from scratch (Go, Node, etc.)
+            value: 3
       - title: Company Size
         id: company_size
         template: single
         options:
-          - Just me
-          - 1-5 people
-          - 5-10 people
-          - 10-20 people
-          - 20-50 people
-          - 50-100 people
-          - 100-1000 people
-          - 1000+ people
+          - label: Just me
+            value: range_1
+          - label: 1-5 people
+            value: range_1_5
+          - label: 5-10 people
+            value: range_5_10
+          - label: 10-20 people
+            value: range_10_20
+          - label: 20-50 people
+            value: range_20_50
+          - label: 50-100 people
+            value: range_50_100
+          - label: 100-1000 people
+            value: range_100_1000
+          - label: 1000+ people
+            value: range_more_than_1000
       - title: Yearly Salary
         id: yearly_salary
         description: In USD
         template: single
         options:
-          - I work for free :(
-          - $0-$10k
-          - $10k-$30k
-          - $30k-$50k
-          - $50k-$100k
-          - $100k-$200k
-          - $200k+
+          - label: I work for free :(
+            value: range_work_for_free
+          - label: $0-$10k
+            value: range_0_10
+          - label: $10k-$30k
+            value: range_10_30
+          - label: $30k-$50k
+            value: range_30_50
+          - label: $50k-$100k
+            value: range_50_100
+          - label: $100k-$200k
+            value: range_100_200
+          - label: $200k+
+            value: range_more_than_200
       - title: How did you find out about this survey?
         id: how_did_you_find_out
         template: text
@@ -653,10 +700,14 @@ outline:
         template: single
         allowother: true
         options:
-          - Female
-          - Male
-          - Non-binary/ third gender
-          - Prefer not to say
+          - label: Female
+            value: female
+          - label: Male
+            value: male
+          - label: Non-binary/ third gender
+            value: non_binary
+          - label: Prefer not to say
+            value: prefer_not_to_say
       - title: Your Email
         id: email
         description: If you'd like to be notified when survey results are available. Your email won't be used for any other purpose.
