--- a/packages/stateofjs/lib/surveys/yml/css2020outline.yml
+++ b/packages/stateofjs/lib/surveys/yml/css2020outline.yml
@@ -383,29 +383,18 @@ outline:
       - id: css_for_print
         template: single
         options:
-          - label: I (almost) never write print styles
-            value: 0
-          - label: I occasionally write print styles
-            value: 1
-          - label: I write print styles as part of most projects
-            value: 2
-          - label: I focus mainly on CSS for print
-            value: 3
+          - 0
+          - 1
+          - 2
+          - 3
 
       - id: css_for_email
         template: single
-        allowmultiple: false
-        allowother: false
-        randomize: false
         options:
-          - label: I (almost) never write CSS for email clients
-            value: 0
-          - label: I occasionally write CSS for email clients
-            value: 1
-          - label: I write CSS for email clients as part of most projects
-            value: 2
-          - label: I focus mainly on CSS for email clients
-            value: 3
+          - 0
+          - 1
+          - 2
+          - 3
 
     ### RESOURCES ###
 
@@ -495,84 +484,53 @@ outline:
       - id: company_size
         template: single
         options:
-          - label: Just me
-            value: range_1
-          - label: 1-5 people
-            value: range_1_5
-          - label: 5-10 people
-            value: range_5_10
-          - label: 10-20 people
-            value: range_10_20
-          - label: 20-50 people
-            value: range_20_50
-          - label: 50-100 people
-            value: range_50_100
-          - label: 100-1000 people
-            value: range_100_1000
-          - label: 1000+ people
-            value: range_more_than_1000
+          - range_1
+          - range_1_5
+          - range_5_10
+          - range_10_20
+          - range_20_50
+          - range_50_100
+          - range_100_1000
+          - range_more_than_1000
 
       - id: yearly_salary
         template: single
         options:
-          - label: I work for free :(
-            value: range_work_for_free
-          - label: $0-$10k
-            value: range_0_10
-          - label: $10k-$30k
-            value: range_10_30
-          - label: $30k-$50k
-            value: range_30_50
-          - label: $50k-$100k
-            value: range_50_100
-          - label: $100k-$200k
-            value: range_100_200
-          - label: $200k+
-            value: range_more_than_200
+          - range_work_for_free
+          - range_0_10
+          - range_10_30
+          - range_30_50
+          - range_50_100
+          - range_100_200
+          - range_more_than_200
 
       - id: job_title
         template: single
         allowother: true
         options:
-          - label: Front-end Developer/Engineer
-            value: front_end_developer
-          - label: Full-stack Developer/Engineer
-            value: full_stack_developer
-          - label: Back-end Developer/Engineer
-            value: back_end_developer
-          - label: Web Developer
-            value: web_developer
-          - label: Web Designer
-            value: web_designer
-          - label: UI Designer
-            value: ui_designer
-          - label: UX Designer
-            value: ux_designer
+          - front_end_developer
+          - full_stack_developer
+          - back_end_developer
+          - web_developer
+          - web_designer
+          - ui_designer
+          - ux_designer
             
       - id: javascript_proficiency
         template: single
         options:
-          - label: I am not able to write any JavaScript
-            value: 0
-          - label: I can write short, simple JavaScript or jQuery statements
-            value: 1
-          - label: I can work on existing front-end codebases using modern frameworks (React, Vue, etc.)
-            value: 2
-          - label: I can architecture entire front-end codebases from scratch
-            value: 3
-          - label: I can handle advanced front-end patterns (state management, data loading, etc.)
-            value: 4
+          - 0
+          - 1
+          - 2
+          - 3
+          - 4
       - id: backend_proficiency
         template: single
         options:
-          - label: I am not able to handle any back-end work
-            value: 0
-          - label: I can set up all-in-one CMSs (WordPress, etc.) or static site generators (Jekyll, etc.)
-            value: 1
-          - label: I can develop apps using pre-existing frameworks (Rails, Laravel, etc.)
-            value: 2
-          - label: I can set up an entire back-end from scratch (Go, Node, etc.)
-            value: 3
+          - 0
+          - 1
+          - 2
+          - 3
       - id: how_did_you_find_out
         template: text
       - id: gender
