Lots of improvements

--- a/packages/stateofjs/lib/surveys/yml/css2020outline.yml
+++ b/packages/stateofjs/lib/surveys/yml/css2020outline.yml
@@ -6,19 +6,24 @@
 ---
 ### FEATURES ###
 
-slug: css2020
+slug: css2020 # used as first part of field names
+prettySlug: state-of-css
+hashtag: StateOfCSS2020
 name: 'State of CSS'
 year: 2020
 status: 1 # preview
 imageUrl: 'stateofcss2020.png'
+bgColor: '#232840'
+textColor: '#9ac6c9'
+linkColor: '#f649a7'
 outline:
   - id: layout
     template: feature
-    slug: features
+    slug: features # used as second part of field names
     questions:
-      - id: grid
+      - id: grid # used as third part of field name
       - id: subgrid
-      - id: regions
+      - id: regions # intl key is of the form ${section.slug}.${question.id}
       - id: flexbox
       - id: multi_column
       - id: writing_modes
@@ -379,18 +384,18 @@ outline:
       - id: css_for_print
         template: single
         options:
-          - 0
-          - 1
-          - 2
-          - 3
+          - id: 0
+          - id: 1
+          - id: 2
+          - id: 3
 
       - id: css_for_email
         template: single
         options:
-          - 0
-          - 1
-          - 2
-          - 3
+          - id: 0
+          - id: 1
+          - id: 2
+          - id: 3
 
     ### RESOURCES ###
 
@@ -470,77 +475,73 @@ outline:
       - id: years_of_experience
         template: single
         options:
-          - range_less_than_1
-          - range_1_2
-          - range_2_5
-          - range_5_10
-          - range_10_20
-          - range_more_than_20
+          - id: range_less_than_1
+          - id: range_1_2 # for intl'd options, intl keys are of the form options.${question.id}.${option.id}
+          - id: range_2_5
+          - id: range_5_10
+          - id: range_10_20
+          - id: range_more_than_20
 
       - id: company_size
         template: single
         options:
-          - range_1
-          - range_1_5
-          - range_5_10
-          - range_10_20
-          - range_20_50
-          - range_50_100
-          - range_100_1000
-          - range_more_than_1000
+          - id: range_1
+          - id: range_1_5
+          - id: range_5_10
+          - id: range_10_20
+          - id: range_20_50
+          - id: range_50_100
+          - id: range_100_1000
+          - id: range_more_than_1000
 
       - id: yearly_salary
         template: single
         options:
-          - range_work_for_free
-          - range_0_10
-          - range_10_30
-          - range_30_50
-          - range_50_100
-          - range_100_200
-          - range_more_than_200
+          - id: range_work_for_free
+          - id: range_0_10
+          - id: range_10_30
+          - id: range_30_50
+          - id: range_50_100
+          - id: range_100_200
+          - id: range_more_than_200
 
       - id: job_title
         template: single
         allowother: true
         options:
-          - front_end_developer
-          - full_stack_developer
-          - back_end_developer
-          - web_developer
-          - web_designer
-          - ui_designer
-          - ux_designer
-            
+          - id: front_end_developer
+          - id: full_stack_developer
+          - id: back_end_developer
+          - id: web_developer
+          - id: web_designer
+          - id: ui_designer
+          - id: ux_designer
+
       - id: javascript_proficiency
         template: single
         options:
-          - 0
-          - 1
-          - 2
-          - 3
-          - 4
+          - id: 0
+          - id: 1
+          - id: 2
+          - id: 3
+          - id: 4
       - id: backend_proficiency
         template: single
         options:
-          - 0
-          - 1
-          - 2
-          - 3
+          - id: 0
+          - id: 1
+          - id: 2
+          - id: 3
       - id: how_did_you_find_out
         template: text
       - id: gender
         template: single
         allowother: true
         options:
-          - label: Female
-            value: female
-          - label: Male
-            value: male
-          - label: Non-binary/ third gender
-            value: non_binary
-          - label: Prefer not to say
-            value: prefer_not_to_say
+          - id: female
+          - id: male
+          - id: non_binary
+          - id: prefer_not_to_say
       - id: email
         template: email
       - id: country
