--- a/packages/stateofjs/lib/surveys/yml/css2020outline.yml
+++ b/packages/stateofjs/lib/surveys/yml/css2020outline.yml
@@ -529,22 +529,12 @@ outline:
           - id: web_designer
           - id: ui_designer
           - id: ux_designer
-
+      - id: css_proficiency
+        template: proficiency
       - id: javascript_proficiency
-        template: single
-        options:
-          - id: 0
-          - id: 1
-          - id: 2
-          - id: 3
-          - id: 4
+        template: proficiency
       - id: backend_proficiency
-        template: single
-        options:
-          - id: 0
-          - id: 1
-          - id: 2
-          - id: 3
+        template: proficiency
       - id: how_did_you_find_out
         template: text
       - id: gender
