--- a/packages/stateofjs/lib/surveys/yml/js2019outline.yml
+++ b/packages/stateofjs/lib/surveys/yml/js2019outline.yml
@@ -399,22 +399,12 @@ outline:
           - id: full_stack_developer
           - id: back_end_developer
           - id: web_developer
+      - id: javascript_proficiency
+        template: proficiency
       - id: css_proficiency
-        template: single
-        options:
-          - id: 0
-          - id: 1
-          - id: 2
-          - id: 3
-          - id: 4
+        template: proficiency
       - id: backend_proficiency
-        template: single
-        options:
-          - id: 0
-          - id: 1
-          - id: 2
-          - id: 3
-          - id: 4
+        template: proficiency
       - id: company_size
         template: single
         options:
