Working on on-the-fly normalization

--- a/packages/stateofjs/lib/surveys/yml/css2020outline.yml
+++ b/packages/stateofjs/lib/surveys/yml/css2020outline.yml
@@ -15,7 +15,7 @@ hashtag: StateOfCSS
 shareUrl: https://stateofcss.com
 name: 'State of CSS'
 year: 2020
-status: 1 # preview
+status: 2 # preview
 imageUrl: 'stateofcss2020.png'
 bgColor: '#232840'
 textColor: '#9ac6c9'
@@ -232,7 +232,8 @@ outline:
       - id: pre_post_processors
         intlId: tools.other_tools
         template: text
-        sectionSlug: other_tools
+        sectionSlug: sections_other_tools
+        suffix: others
       - id: pre_post_processors
         intlId: tools.happiness
         template: happiness
@@ -261,7 +262,8 @@ outline:
       - id: css_frameworks
         intlId: tools.other_tools
         template: text
-        sectionSlug: other_tools
+        sectionSlug: sections_other_tools
+        suffix: others
       - id: css_frameworks
         intlId: tools.happiness
         template: happiness
@@ -280,7 +282,8 @@ outline:
       - id: css_methodologies
         intlId: tools.other_tools
         template: text
-        sectionSlug: other_tools
+        sectionSlug: sections_other_tools
+        suffix: others
       - id: css_methodologies
         intlId: tools.happiness
         template: happiness
@@ -303,10 +306,12 @@ outline:
       - Styletron
       - Fela
       - Linaria
+      - Astroturf
       - id: css_in_js
         intlId: tools.other_tools
         template: text
-        sectionSlug: other_tools
+        sectionSlug: sections_other_tools
+        suffix: others
       - id: css_in_js
         intlId: tools.happiness
         template: happiness
@@ -317,6 +322,16 @@ outline:
   - id: other_tools
     slug: other_tools
     questions:
+      - id: utilities
+        template: multiple
+        allowmultiple: true
+        options:
+          - Stylelint
+          - PurgeCSS
+          - PurifyCSS
+      - id: utilities
+        suffix: others
+        template: text
       - id: text_editors
         template: multiple
         allowmultiple: true
@@ -396,6 +411,7 @@ outline:
 
       - id: css_for_print
         template: single
+        fieldType: Number
         options:
           - id: 0
           - id: 1
@@ -404,6 +420,7 @@ outline:
 
       - id: css_for_email
         template: single
+        fieldType: Number
         options:
           - id: 0
           - id: 1
@@ -423,9 +440,10 @@ outline:
           - CoDrops
           - SitePoint
           - David Walsh
-          - Front-End Front
-          - CSS Weekly
           - Dev.to
+          - Sidebar
+          - HeyDesigner
+          - CSS Weekly
       - id: blogs_news_magazines
         template: text
         suffix: others
@@ -535,7 +553,7 @@ outline:
         template: proficiency
       - id: backend_proficiency
         template: proficiency
-      - id: how_did_you_find_out
+      - id: how_did_user_find_out_about_the_survey
         template: text
       - id: gender
         template: single
@@ -545,5 +563,14 @@ outline:
           - id: male
           - id: non_binary
           - id: prefer_not_to_say
+      - id: skin_tone
+        template: single
+        fieldType: Number
+        options:
+          - id: 0
+          - id: 1
+          - id: 2
+          - id: 3
+          - id: 4
       - id: country
         template: country
