More normalization work

--- a/packages/stateofjs/lib/surveys/yml/css2020outline.yml
+++ b/packages/stateofjs/lib/surveys/yml/css2020outline.yml
@@ -496,6 +496,7 @@ outline:
       - id: enjoy_writing_css
         template: opinion
       - id: currently_missing_from_css
+        suffix: others
         template: longtext
 
   ### DEMOGRAPHICS ###
