--- a/packages/stateofjs/lib/surveys/yml/js2019outline.yml
+++ b/packages/stateofjs/lib/surveys/yml/js2019outline.yml
@@ -13,6 +13,7 @@ createdAt: December 1, 2019
 prettySlug: state-of-js
 hashtag: StateOfJS
 shareUrl: https://stateofjs.com
+resultsUrl: https://2019.stateofjs.com/
 name: 'State of JavaScript'
 year: 2019
 status: 3 # closed
