Add state of web/css questions

--- a/packages/stateofjs/lib/surveys/yml/css2020outline.yml
+++ b/packages/stateofjs/lib/surveys/yml/css2020outline.yml
@@ -15,7 +15,7 @@ hashtag: StateOfCSS
 shareUrl: https://stateofcss.com
 name: 'State of CSS'
 year: 2020
-status: 1 # preview
+status: 2
 imageUrl: 'stateofcss2020.png'
 bgColor: '#232840'
 textColor: '#9ac6c9'
@@ -471,6 +471,7 @@ outline:
           - Sidebar
           - HeyDesigner
           - CSS Weekly
+          - Frontend Horse
       - id: blogs_news_magazines
         template: text
         suffix: others
@@ -526,6 +527,12 @@ outline:
       - id: currently_missing_from_css
         suffix: others
         template: longtext
+      - id: state_of_the_web
+        template: happiness
+        sectionSlug: happiness
+      - id: state_of_css
+        template: happiness
+        sectionSlug: happiness
       # - id: sum_up_one_word_css
       #   template: text
 
