Add <code> to question titles

--- a/packages/stateofjs/lib/surveys/yml/css2020outline.yml
+++ b/packages/stateofjs/lib/surveys/yml/css2020outline.yml
@@ -578,6 +578,7 @@ outline:
         template: single
         allowother: true
         options:
+          - id: cto
           - id: front_end_developer
           - id: full_stack_developer
           - id: back_end_developer
